jena-shex/src/test/files/spec/negativeSyntax/tripleConsraint-no-valueClass.shex
# tripleConsraint with no valueClass
# source: turtle-syntax-bad-struct-12.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1>
}
